db
   Compiling todo v0.1.0 (/home/linux/rust/ToDo)
error[E0432]: unresolved import `actix_files`
 --> src/main.rs:6:5
  |
6 | use actix_files as fs;
  |     ^^^^^^^^^^^^^^^^^ no external crate `actix_files`

error: cannot find attribute `delete` in this scope
  --> src/main.rs:79:3
   |
79 | #[delete("/api/tasks/{id}")]
   |   ^^^^^^
   |
help: consider importing this attribute macro
   |
1  + use actix_web::delete;
   |

error[E0412]: cannot find type `addTaskForm` in this scope
  --> src/main.rs:64:63
   |
50 | struct AddTaskForm {
   | ------------------ similarly named struct `AddTaskForm` defined here
...
64 | async fn add_task(pool: web::Data<SqlitePool>,form: web::Form<addTaskForm>) -> HttpResponse {
   |                                                               ^^^^^^^^^^^
   |
help: a struct with a similar name exists
   |
64 - async fn add_task(pool: web::Data<SqlitePool>,form: web::Form<addTaskForm>) -> HttpResponse {
64 + async fn add_task(pool: web::Data<SqlitePool>,form: web::Form<AddTaskForm>) -> HttpResponse {
   |
help: you might be missing a type parameter
   |
64 | async fn add_task<addTaskForm>(pool: web::Data<SqlitePool>,form: web::Form<addTaskForm>) -> HttpResponse {
   |                  +++++++++++++

error[E0425]: cannot find value `priority` in this scope
  --> src/main.rs:69:24
   |
69 |         .bind(new_task,priority)
   |                        ^^^^^^^^ not found in this scope

error[E0061]: this method takes 1 argument but 2 arguments were supplied
  --> src/main.rs:69:10
   |
69 |         .bind(new_task,priority)
   |          ^^^^          -------- unexpected argument #2
   |
note: method defined here
  --> /home/linux/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/sqlx-core-0.7.4/src/query.rs:81:12
   |
81 |     pub fn bind<T: 'q + Send + Encode<'q, DB> + Type<DB>>(mut self, value: T) -> Self {
   |            ^^^^
help: remove the extra argument
   |
69 -         .bind(new_task,priority)
69 +         .bind(new_task)
   |

error[E0609]: no field `default` on type `&TodoTemplate`
  --> src/main.rs:23:10
   |
23 | #[derive(Template)]
   |          ^^^^^^^^ unknown field
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `std::option::Option<u32>` doesn't implement `std::fmt::Display`
  --> src/main.rs:23:10
   |
23 | #[derive(Template)]
   |          ^^^^^^^^ `std::option::Option<u32>` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `std::option::Option<u32>`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required for `&std::option::Option<u32>` to implement `std::fmt::Display`
note: required by a bound in `MarkupDisplay`
  --> /home/linux/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/askama_escape-0.10.3/src/lib.rs:12:8
   |
9  | pub struct MarkupDisplay<E, T>
   |            ------------- required by a bound in this struct
...
12 |     T: Display,
   |        ^^^^^^^ required by this bound in `MarkupDisplay`
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `std::option::Option<u32>` doesn't implement `std::fmt::Display`
  --> src/main.rs:23:10
   |
23 | #[derive(Template)]
   |          ^^^^^^^^ `std::option::Option<u32>` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `std::option::Option<u32>`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(Data<Pool<Sqlite>>, ...) -> ... {delete_task}: HttpServiceFactory` is not satisfied
   --> src/main.rs:138:22
    |
138 |             .service(delete_task)
    |              ------- ^^^^^^^^^^^ the trait `HttpServiceFactory` is not implemented for fn item `fn(Data<Pool<Sqlite>>, Path<i64>) -> ... {delete_task}`
    |              |
    |              required by a bound introduced by this call
    |
    = help: the following other types implement trait `HttpServiceFactory`:
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
              (A, B, C, D, E, F, G, H, I)
            and 11 others
note: required by a bound in `App::<T>::service`
   --> /home/linux/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/actix-web-4.11.0/src/app.rs:239:12
    |
237 |     pub fn service<F>(mut self, factory: F) -> Self
    |            ------- required by a bound in this associated function
238 |     where
239 |         F: HttpServiceFactory + 'static,
    |            ^^^^^^^^^^^^^^^^^^ required by this bound in `App::<T>::service`
    = note: the full name for the type has been written to '/home/linux/rust/ToDo/target/debug/deps/todo-bbc3e28351c5cd22.long-type-10107223564059832236.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0599]: no method named `serivce` found for struct `App` in the current scope
   --> src/main.rs:140:14
    |
135 | /         App::new()
136 | |             .service(hello)
137 | |             .service(add_task)
138 | |             .service(delete_task)
139 | |             .service(todo)
140 | |             .serivce(fs::Files::new("/static","./static"))
    | |_____________-^^^^^^^
    |
help: there is a method `service` with a similar name
    |
140 -             .serivce(fs::Files::new("/static","./static"))
140 +             .service(fs::Files::new("/static","./static"))
    |

warning: unused import: `Row`
 --> src/main.rs:4:12
  |
4 | use sqlx::{Row, SqlitePool};
  |            ^^^
  |
  = note: `#[warn(unused_imports)]` on by default

Some errors have detailed explanations: E0061, E0277, E0412, E0425, E0432, E0599, E0609.
For more information about an error, try `rustc --explain E0061`.
warning: `todo` (bin "todo") generated 1 warning
error: could not compile `todo` (bin "todo") due to 10 previous errors; 1 warning emitted
